# trasformer_from_scratches

./: README.md
tranformers/: pyproject.toml
tranformers/tranformers/: config.py  data.py  decoder.py  encoder.py  main.py  model.py  parser.py  utils.py
